Remove text-wrap pretty from global p rule to fix iOS line breaks

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, li {
-  text-wrap: pretty;
   hyphens: none;
   -webkit-hyphens: none;
   -ms-hyphens: none;
